--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
   },
   "devDependencies": {
     "connect-livereload": "^0.6.1",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "@types/express": "^4.17.13",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-terser": "^2.0.1",
     "gulp-uglifycss": "^1.1.0",
-    "livereload": "^0.9.3"
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "install": "^0.13.0",
+    "livereload": "^0.9.3",
+    "npm": "^7.20.1",
+    "typescript": "^4.3.5"
   }
 }
