--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Kewyn Ryan Vieira de Latorre",
   "license": "APACHE LICENSE, VERSION 2.0",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2"
   },
   "devDependencies": {
     "connect-livereload": "^0.6.1",
