--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "connect-livereload": "^0.6.1",
+    "typescript": "^4.3.5",
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "@types/express": "^4.17.13",
@@ -26,9 +27,6 @@
     "gulp": "^4.0.2",
     "gulp-terser": "^2.0.1",
     "gulp-uglifycss": "^1.1.0",
-    "install": "^0.13.0",
-    "livereload": "^0.9.3",
-    "npm": "^7.20.1",
-    "typescript": "^4.3.5"
+    "livereload": "^0.9.3"
   }
 }
